--- a/nginx/nginx/sites-available/fieldkit.org
+++ b/nginx/nginx/sites-available/fieldkit.org
@@ -50,8 +50,8 @@ server {
 	server_name	fieldkit.org www.fieldkit.org;
 
 	ssl                  on;
-	ssl_certificate      /etc/letsencrypt/live/fieldkit.org/nginx-selfsigned.crt;
-	ssl_certificate_key  /etc/letsencrypt/live/fieldkit.org/nginx-selfsigned.key;
+	ssl_certificate      /etc/letsencrypt/live/fieldkit.org/fullchain.pem;
+	ssl_certificate_key  /etc/letsencrypt/live/fieldkit.org/privkey.pem;
 
 	access_log  /var/log/nginx/fieldkit.access.log;
 	error_log  /var/log/nginx/fieldkit.error.log debug;
