--- a/README.org
+++ b/README.org
@@ -1,19 +1,7 @@
-<<<<<<< HEAD
-# Steps
+#+TITLE:  README for dev-ops
+#+EMAIL:  jacob@conservify.org 
+ 
+* Developer Instructions 
+*** Machine Setup
 
-  sudo apt-get install tmux htop
-
-  Install Docker
-  sudo apt-get install docker.io 
-
-  Create jenkins user and SSH key in jenkins.
-  sudo adduser jenkins
-
-  Build containers.
-
-
-
-=======
-# aws
-Source/configuration for AWS infrastructure.
->>>>>>> aws/master
+* EOF
