--- a/docker/nginx/nginx/sites-available/conservify.org
+++ b/docker/nginx/nginx/sites-available/conservify.org
@@ -53,6 +53,30 @@ server {
 		autoindex_format json;
 	}
 
+	location /spotify {
+		auth_basic 	     "Administrator";
+		auth_basic_user_file /etc/nginx/htpasswd; 
+
+		proxy_pass         http://spotify:9090/spotify;
+		proxy_redirect     off;
+
+		proxy_set_header   Host             $host;
+		proxy_set_header   X-Real-IP        $remote_addr;
+		proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
+		proxy_max_temp_file_size 0;
+
+		client_max_body_size       1g;
+		client_body_buffer_size    128k;
+
+		proxy_connect_timeout      90;
+		proxy_send_timeout         90;
+		proxy_read_timeout         90;
+
+		proxy_buffer_size          4k;
+		proxy_buffers              4 32k;
+		proxy_busy_buffers_size    64k;
+	}
+
 	location /glacier {
 		proxy_pass         http://glacier-status:8000/glacier;
 		proxy_redirect     off;
