--- a/docker/nginx/nginx/sites-available/conservify.org
+++ b/docker/nginx/nginx/sites-available/conservify.org
@@ -173,9 +173,10 @@ server {
 		proxy_pass         http://logs:9000/logs;
 		proxy_redirect     off;
 
-		proxy_set_header   Host             $host;
-		proxy_set_header   X-Real-IP        $remote_addr;
-		proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
+		proxy_set_header   Host                  $host;
+		proxy_set_header   X-Real-IP             $remote_addr;
+		proxy_set_header   X-Forwarded-For       $proxy_add_x_forwarded_for;
+		proxy_set_header   X-Graylog-Server-URL  https://code.conservify.org/logs/;
 		proxy_max_temp_file_size 0;
 
 		client_max_body_size       1g;
