Proxy and SSL stuff for jitsi

--- a/docker/nginx/nginx/sites-available/conservify.org
+++ b/docker/nginx/nginx/sites-available/conservify.org
@@ -16,26 +16,31 @@ server {
 
 	include server-common.conf;
 
-	location /distribution {
-		alias /var/lib/distribution;
-		autoindex on;
-		autoindex_format json;
+	location / {
+		rewrite ^ https://code.conservify.org$request_uri? permanent;
+	}
+}
+
+server {
+
+	listen   80;
+
+	# chunkin on;
+ 
+	error_page 411 = @my_411_error;
+	location @my_411_error {
+		# chunkin_resume;
 	}
 
-	location /glacier/data {
-		alias /var/lib/glacier-data;
-		autoindex on;
-		autoindex_format json;
-	}
+	server_name	jitsi.conservify.org;
 
-	location /time {
-		ssi on;
-		alias /var/www/time;
-	}
+	access_log  /var/log/nginx/jitsi.conservify.access.log;
+	error_log  /var/log/nginx/jitsi.conservify.error.log debug;
+
+	include server-common.conf;
 
 	location / {
-		root /var/www/html;
-		rewrite ^ https://code.conservify.org$request_uri? permanent;
+		rewrite ^ https://jitsi.conservify.org$request_uri? permanent;
 	}
 }
 
@@ -51,6 +56,10 @@ server {
 	error_log  /var/log/nginx/conservify.error.log debug;
 
 	include server-common.conf;
+
+	location ^~ /.well-known/acme-challenge/ {
+		alias /var/www/conservify.org/.well-known/acme-challenge/;
+	}
 
 	location /distribution {
 		alias /var/lib/distribution;
@@ -241,3 +250,41 @@ server {
 	}
 }
 
+server {
+	listen   443;
+	server_name	jitsi.conservify.org;
+
+	ssl                  on;
+	ssl_certificate      /etc/letsencrypt/live/code.conservify.org/fullchain.pem;
+	ssl_certificate_key  /etc/letsencrypt/live/code.conservify.org/privkey.pem;
+
+	access_log  /var/log/nginx/jitsi.conservify.access.log;
+	error_log  /var/log/nginx/jitsi.conservify.error.log debug;
+
+	include server-common.conf;
+
+	location ^~ /.well-known/acme-challenge/ {
+		alias /var/www/conservify.org/.well-known/acme-challenge/;
+	}
+
+	location / {
+		proxy_pass         http://172.17.0.1:8081/;
+		proxy_redirect     off;
+
+		proxy_set_header   Host             $host;
+		proxy_set_header   X-Real-IP        $remote_addr;
+		proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
+		proxy_max_temp_file_size 0;
+
+		client_max_body_size       1g;
+		client_body_buffer_size    128k;
+
+		proxy_connect_timeout      90;
+		proxy_send_timeout         90;
+		proxy_read_timeout         90;
+
+		proxy_buffer_size          4k;
+		proxy_buffers              4 32k;
+		proxy_busy_buffers_size    64k;
+	}
+}
