--- a/docker/nginx/nginx/sites-available/conservify.org
+++ b/docker/nginx/nginx/sites-available/conservify.org
@@ -45,6 +45,33 @@ server {
 }
 
 server {
+
+	listen   80;
+
+	# chunkin on;
+ 
+	error_page 411 = @my_411_error;
+	location @my_411_error {
+		# chunkin_resume;
+	}
+
+	server_name	strapi.conservify.org;
+
+	access_log  /var/log/nginx/strapi.conservify.access.log;
+	error_log  /var/log/nginx/strapi.conservify.error.log debug;
+
+	include server-common.conf;
+
+	location ^~ /.well-known/acme-challenge/ {
+		alias /var/www/conservify.org/.well-known/acme-challenge/;
+	}
+
+	location / {
+		rewrite ^ https://strapi.conservify.org$request_uri? permanent;
+	}
+}
+
+server {
 	listen   443;
 	server_name	code.conservify.org;
 
@@ -269,6 +296,45 @@ server {
 
 	location / {
 		proxy_pass         http://172.17.0.1:8081/;
+		proxy_redirect     off;
+
+		proxy_set_header   Host             $host;
+		proxy_set_header   X-Real-IP        $remote_addr;
+		proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
+		proxy_max_temp_file_size 0;
+
+		client_max_body_size       1g;
+		client_body_buffer_size    128k;
+
+		proxy_connect_timeout      90;
+		proxy_send_timeout         90;
+		proxy_read_timeout         90;
+
+		proxy_buffer_size          4k;
+		proxy_buffers              4 32k;
+		proxy_busy_buffers_size    64k;
+	}
+}
+
+server {
+	listen   443;
+	server_name	strapi.conservify.org;
+
+	ssl                  on;
+	ssl_certificate      /etc/letsencrypt/live/code.conservify.org/fullchain.pem;
+	ssl_certificate_key  /etc/letsencrypt/live/code.conservify.org/privkey.pem;
+
+	access_log  /var/log/nginx/strapi.conservify.access.log;
+	error_log  /var/log/nginx/strapi.conservify.error.log debug;
+
+	include server-common.conf;
+
+	location ^~ /.well-known/acme-challenge/ {
+		alias /var/www/conservify.org/.well-known/acme-challenge/;
+	}
+
+	location / {
+		proxy_pass         http://172.17.0.1:1337/;
 		proxy_redirect     off;
 
 		proxy_set_header   Host             $host;
